2001-02-09  Jonathan Gapen  <jagapen@home.com>

	More FreeBSD build fixes:
	* acconfig.h: Add recent definitions.
	* configure.in: Add test for wchar.h header.
	* configure: Regenerate.
	* Headers/gnustep/base/config.h.in: Regenerate.
	* Source/GSFormat.m: Typedef wint_t if wchar.h not available.
	* Source/NSTask.m: Change #if TIOCNOTTY to #ifdef TIOCNOTTY.

2001-02-08  Nicola Pero  <n.pero@mi.flashnet.it>

	* INSTALL: Updated installation instructions.

2001-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	Fixes reported by David Wetzel ...
	* Source/GSFormat.h: Add header for wchar
	* Source/NSCoder.m: Remove spurious semicolon
	* Source/dynamic-load.h: correct argument to dlsym()

2001-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: permit nil string when replacing characters
	in range.  Treat as an empty string rather than raising exception.

2001-02-07  Jonathan Gapen  <jagapen@home.com>

	* Source/NSFileManager.m: Make disk space report work on FreeBSD.
	On all Unix platforms, report disk space available to non-root users.

2001-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: merged in some more fixes by Kai.

2001-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: Fixed error in PAD() macro - it was failing to
	decrement a counter - and looping forever.
	Fixed error in formatted output of string arguments ... was
	crashing with range exception.

2001-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: Added gnustep specific feature to run task in
	pseudo terminal.

2001-02-02  Richard Frith-Macdonald <rfm@gnu.org>

	Integrated patch for unicode support for ([-initWithFormat:]) by
	Kai Henningsen.  Modified to support efficient append with format
	to a unicode string.
	* configure.in: Test for data type used by GSFormat
	* Headers/gnustep/base/GSFormat.h: file declaring GSFormat info.
	* Source/GSFormat.m: Source for format support.